@@ -5,6 +5,7 @@ core 2.1.3 - not released yet
 	* Bugfix: Cropping of tabs didn't work correctly in ie. Due to substr(negativeValue)
 	* Bugfix: Checkbox had problem with default value
 	* Bugfix: ReplyTo & sender of emails were automatically set to the system mail
+	* Bugfix: Simplified textarea auto resize. Works now in all major up-to-date browsers
 	* Added: Cropping for database relation labels in form
 	* Added TodoyuTime::time() to set null values to current time
 	* Added TodoyuDateRange
